fixed summary for cohort changed file path in title to relative path added space between IR icons in summary inside submission table fixed treemap details loading fixed files tree node width fixed media viewer's content alignment

--- a/src/components/FileBrowser/style.scss
+++ b/src/components/FileBrowser/style.scss
@@ -59,6 +59,8 @@
       flex-grow: 1;
       overflow: auto;
       padding: .75rem 0;
+      /* fix for &file-tree__node width */
+      position: relative;
     }
   }
 }
