--- a/src/modules/AnalysisExecution/components/ViewEditAnalysis/ListSubmissions/Results/style.scss
+++ b/src/modules/AnalysisExecution/components/ViewEditAnalysis/ListSubmissions/Results/style.scss
@@ -37,6 +37,7 @@
       padding-right: 0.5rem;
       display: flex;
       align-items: center;
+      margin-right: 0.75rem;
     }
     &__result-ico {
       @include material-icon();
